# hido

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml
python/: .env.example  app.py  example.py
src/: lib.rs
src/audit/: backend.rs  config.rs  entry.rs  factory.rs  filter.rs  mod.rs
src/audit/backends/: blockchain.rs  hybrid.rs  kafka_s3.rs  mod.rs  postgres.rs
src/bal/: block.rs  chain.rs  mod.rs
src/compliance/: audit.rs  export.rs  mod.rs  rules.rs
src/consensus/: engine.rs  guardrails.rs  mod.rs  voting.rs
src/core/: error.rs  mod.rs  types.rs
src/federated/: aggregator.rs  learner.rs  mod.rs  noniid.rs
src/gnn/: attention.rs  learner.rs  mod.rs  temporal.rs
src/icc/: compression.rs  intent.rs  mod.rs  protocol.rs  router.rs
src/k8s/: deployment.rs  mod.rs  service.rs
src/monitoring/: alerts.rs  logging.rs  metrics.rs  mod.rs
src/paramserver/: mod.rs  region.rs  server.rs
src/plugin/: interface.rs  mod.rs  registry.rs
src/python/: mod.rs
src/region/: failover.rs  manager.rs  mod.rs  sync.rs
src/sla/: agreement.rs  mod.rs  reporter.rs  tracker.rs
src/uail/: credential.rs  crypto.rs  did.rs  mod.rs
