[package]
name = "hido"
version = "0.1.0"
edition = "2021"
description = "Hierarchical Intent-Driven Orchestration - A decentralized agent framework"
license = "MIT"
authors = ["YASSERRMD <arafath.yasser@gmail.com>"]
repository = "https://github.com/YASSERRMD/hido"
keywords = ["agents", "decentralized", "blockchain", "identity", "ai"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde"] }
sha3 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Compression
lz4_flex = "0.11"

# Utilities
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
